--- a/Reproductor/nbproject/project.properties
+++ b/Reproductor/nbproject/project.properties
@@ -33,10 +33,29 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Reproductor
 excludes=
+file.reference.basicplayer3.0.jar=..\\reproductor de musica mp3\\lib\\basicplayer3.0.jar
+file.reference.commons-logging-api.jar=..\\reproductor de musica mp3\\lib\\commons-logging-api.jar
+file.reference.jl1.0.jar=..\\reproductor de musica mp3\\lib\\jl1.0.jar
+file.reference.jogg-0.0.7.jar=..\\reproductor de musica mp3\\lib\\jogg-0.0.7.jar
+file.reference.jorbis-0.0.15.jar=..\\reproductor de musica mp3\\lib\\jorbis-0.0.15.jar
+file.reference.jspeex0.9.7.jar=..\\reproductor de musica mp3\\lib\\jspeex0.9.7.jar
+file.reference.mp3spi1.9.4.jar=..\\reproductor de musica mp3\\lib\\mp3spi1.9.4.jar
+file.reference.tritonus_share.jar=..\\reproductor de musica mp3\\lib\\tritonus_share.jar
+file.reference.vorbisspi1.0.2.jar=..\\reproductor de musica mp3\\lib\\vorbisspi1.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.basicplayer3.0.jar}:\
+    ${file.reference.commons-logging-api.jar}:\
+    ${file.reference.jl1.0.jar}:\
+    ${file.reference.jogg-0.0.7.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.jspeex0.9.7.jar}:\
+    ${file.reference.mp3spi1.9.4.jar}:\
+    ${file.reference.tritonus_share.jar}:\
+    ${file.reference.vorbisspi1.0.2.jar}:\
+    ${libs.lib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
